--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "lpc_ss_char_gen"]
-	path = lpc_ss_char_gen
+[submodule "sanderfrenken_lpc_ss_char_gen"]
+	path = lpc_spritesheets
 	url = https://github.com/DrJamgo/LPC-SpriteSheet-Gen-Godot.git
-	branch = master
+	branch = sparse
 	shallow = true
