--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,8 +1,7 @@
 [plugin]
 
-name="LPC-Spritesheet-Generator"
-description="A Generator for LPC Character Spritesheets based on:
-https://github.com/sanderfrenken/Universal-LPC-Spritesheet-Character-Generator
+name="LPC-Spritesheet-Plugin"
+description="A Plugin supporting import of Spritseets generated with: https://github.com/sanderfrenken/Universal-LPC-Spritesheet-Character-Generator
 "
 author="Dr. Jamgo"
 version="1.0"
